--- a/demo/public/menus.html
+++ b/demo/public/menus.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style></style>
-  <title>Crystal Demo</title>
+  <title>Crystal Demo Menus</title>
 </head>
 <body>
   <div id="app"></div>
-  <script src="main.js"></script>
+  <script src="menus.js"></script>
 </body>
 </html>
