--- a/demo/public/moves.html
+++ b/demo/public/moves.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style></style>
-  <title>Crystal Demo</title>
+  <title>Crystal Demo Moves</title>
 </head>
 <body>
   <div id="app"></div>
   <input type="text" id="move"/>
-  <script src="main.js"></script>
+  <script src="moves.js"></script>
   <button id="useMove">Use Move</button>
 </body>
 </html>
