--- a/demo/public/menus.html
+++ b/demo/public/menus.html
@@ -8,6 +8,7 @@
   <title>Crystal Demo Menus</title>
 </head>
 <body>
+  <h1>Battle Demo</h1>
   <div id="app"></div>
   <script src="menus.js"></script>
 </body>
